<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/slectback"

    tools:context=".selectvehicletype">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="Please select the type of vehicle to which you can provide service."
        android:textColor="@color/roundbtn"
        android:textSize="26dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                app:cardElevation="14dp"
                app:cardBackgroundColor="@color/cardclr"
                android:id="@+id/twowheel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Two wheelers"
                        android:textSize="25dp"
                        android:fontFamily="serif"
                        android:textColor="@color/whiteBack"
                        />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="serif"
                        android:textColor="@color/colorBackButton"
                        android:text="@string/two_wheeler"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="20dp"
                app:cardElevation="14dp"
                app:cardBackgroundColor="@color/cardclr"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/threewheel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Three wheelers"
                        android:textSize="25dp"
                        android:fontFamily="serif"
                        android:textColor="@color/whiteBack"
                        />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="serif"
                        android:textColor="@color/colorBackButton"
                        android:text="@string/three_wheeler"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="20dp"
                app:cardElevation="14dp"
                app:cardBackgroundColor="@color/cardclr"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fourwheel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Four wheelers"
                        android:textSize="25dp"
                        android:fontFamily="serif"
                        android:textColor="@color/whiteBack"
                        />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="serif"
                        android:textColor="@color/colorBackButton"
                        android:text="@string/four_wheeler"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="20dp"
                app:cardElevation="14dp"
                app:cardBackgroundColor="@color/cardclr"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sixwheel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Six wheelers"
                        android:textSize="25dp"
                        android:fontFamily="serif"
                        android:textColor="@color/whiteBack"
                        />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="serif"
                        android:textColor="@color/colorBackButton"
                        android:text="@string/six_wheeler"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="20dp"
                app:cardElevation="14dp"
                app:cardBackgroundColor="@color/cardclr"
                android:layout_marginBottom="35dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sixaxelwheel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Six axle wheeler"
                        android:textSize="25dp"
                        android:fontFamily="serif"
                        android:textColor="@color/whiteBack"
                        />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:fontFamily="serif"
                        android:textColor="@color/colorBackButton"
                        android:text="@string/six_axel"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>